--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Neurous</string>
+    <string name="kakao_app_key">58005ef7dbe2dd56f4dd5ee0c582801e</string>
 </resources>
